@@ -35,6 +35,7 @@ Version 1.5.6+svn:
     * Increased the cost of the Goblin Spearman from 8 to 9.
 
   * Miscellaneous and bugfixes
+    * Fixed single-player campaign scenario replays.
     * Fixed random memory corruption/assertion failure/massive memory leak
       due to story screens.
 
